@@ -1,103 +1,122 @@
 package org.pmiops.workbench.initialcredits;
 
+import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
+import static org.pmiops.workbench.utils.BigQueryUtils.tableRow;
 
-import java.util.Arrays;
+import com.google.cloud.bigquery.Field;
+import com.google.cloud.bigquery.FieldValueList;
+import com.google.cloud.bigquery.LegacySQLTypeName;
+import com.google.cloud.bigquery.Schema;
+import com.google.common.base.Stopwatch;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
-import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.TestInstance;
 import org.pmiops.workbench.FakeClockConfiguration;
 import org.pmiops.workbench.api.BigQueryService;
 import org.pmiops.workbench.config.WorkbenchConfig;
-import org.pmiops.workbench.db.dao.GoogleProjectPerCostDao;
 import org.pmiops.workbench.db.dao.UserDao;
 import org.pmiops.workbench.db.dao.WorkspaceDao;
-import org.pmiops.workbench.db.model.DbGoogleProjectPerCost;
 import org.pmiops.workbench.db.model.DbUser;
+import org.pmiops.workbench.utils.BigQueryUtils;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.beans.factory.config.ConfigurableBeanFactory;
 import org.springframework.boot.test.autoconfigure.orm.jpa.DataJpaTest;
 import org.springframework.boot.test.context.TestConfiguration;
 import org.springframework.boot.test.mock.mockito.MockBean;
+import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Import;
+import org.springframework.context.annotation.Scope;
 
 @DataJpaTest
 @TestInstance(TestInstance.Lifecycle.PER_CLASS)
 public class InitialCreditsBatchUpdateServiceTest {
 
-  @Autowired private GoogleProjectPerCostDao mockGoogleProjectPerCostDao;
-  @Autowired private WorkspaceDao mockWorkspaceDao;
   @Autowired private InitialCreditsBatchUpdateService initialCreditsBatchUpdateService;
-  @Autowired private InitialCreditsService mockInitialCreditsService;
-  @Autowired private UserDao mockUserDao;
+
+  @MockBean private WorkspaceDao mockWorkspaceDao;
+  @MockBean private InitialCreditsService mockInitialCreditsService;
+  @MockBean private UserDao mockUserDao;
+  @MockBean private BigQueryService mockBigQueryService;
+
+  private static WorkbenchConfig config;
 
   @TestConfiguration
-  @Import({FakeClockConfiguration.class, InitialCreditsBatchUpdateService.class})
-  @MockBean({
-    GoogleProjectPerCostDao.class,
-    UserDao.class,
-    WorkspaceDao.class,
-    WorkbenchConfig.class,
-    BigQueryService.class,
-    InitialCreditsService.class
+  @Import({
+    FakeClockConfiguration.class,
+    InitialCreditsBatchUpdateService.class,
+    Stopwatch.class,
   })
-  static class Configuration {}
+  static class Configuration {
+    @Bean
+    @Scope(ConfigurableBeanFactory.SCOPE_PROTOTYPE)
+    public WorkbenchConfig workbenchConfig() {
+      return config;
+    }
+  }
 
-  Set<DbUser> mockDbuserSet = new HashSet<DbUser>();
+  Set<DbUser> mockDbUserSet = new HashSet<>();
 
-  Set<String> googleProjectIdsSet = new HashSet<>(Arrays.asList("12", "22", "23", "32", "33"));
+  Set<String> googleProjectIdsSet = new HashSet<>(List.of("12", "22", "23", "32", "33"));
 
-  @BeforeAll
-  public void init() throws Exception {
-    mockDbUser();
+  @BeforeEach
+  public void init() {
+    config = WorkbenchConfig.createEmptyConfig();
+
+    mockDbUsers();
     mockGoogleProjectsForUser();
     mockGoogleProjectCost();
   }
 
   @Test
   public void testFreeTierBillingBatchUpdateService() {
-    initialCreditsBatchUpdateService.checkInitialCreditsUsage(Arrays.asList(1L, 2L, 3L));
+    initialCreditsBatchUpdateService.checkInitialCreditsUsage(List.of(1L, 2L, 3L));
 
-    verify(mockWorkspaceDao, times(1)).getGoogleProjectForUserList(Arrays.asList(1L, 2L, 3L));
-    verify(mockGoogleProjectPerCostDao, times(1)).findAllByGoogleProjectId(googleProjectIdsSet);
+    verify(mockWorkspaceDao, times(1)).getWorkspaceGoogleProjectsForCreators(List.of(1L, 2L, 3L));
 
     verify(mockInitialCreditsService)
-        .checkInitialCreditsUsageForUsers(mockDbuserSet, getUserCostMap());
+        .checkInitialCreditsUsageForUsers(mockDbUserSet, getUserCostMap());
   }
 
-  private void mockDbUser() {
+  private void mockDbUsers() {
     DbUser dbUserForId1 = new DbUser().setUserId(1L);
     DbUser dbUserForId2 = new DbUser().setUserId(2L);
     DbUser dbUserForId3 = new DbUser().setUserId(3L);
     when(mockUserDao.findUserByUserId(1L)).thenReturn(dbUserForId1);
     when(mockUserDao.findUserByUserId(2L)).thenReturn(dbUserForId2);
     when(mockUserDao.findUserByUserId(3L)).thenReturn(dbUserForId3);
-    mockDbuserSet.add(dbUserForId1);
-    mockDbuserSet.add(dbUserForId2);
-    mockDbuserSet.add(dbUserForId3);
+    mockDbUserSet.add(dbUserForId1);
+    mockDbUserSet.add(dbUserForId2);
+    mockDbUserSet.add(dbUserForId3);
   }
 
   private void mockGoogleProjectsForUser() {
-    when(mockWorkspaceDao.getGoogleProjectForUserList(Arrays.asList(1L, 2L, 3L)))
+    when(mockWorkspaceDao.getWorkspaceGoogleProjectsForCreators(List.of(1L, 2L, 3L)))
         .thenReturn(googleProjectIdsSet);
   }
 
   private void mockGoogleProjectCost() {
-    List<DbGoogleProjectPerCost> dbGoogleProjectPerCostList =
-        Arrays.asList(
-            new DbGoogleProjectPerCost("12", 0.013),
-            new DbGoogleProjectPerCost("22", 1.123),
-            new DbGoogleProjectPerCost("23", 6.5),
-            new DbGoogleProjectPerCost("32", 0.34),
-            new DbGoogleProjectPerCost("33", 0.9));
-    when(mockGoogleProjectPerCostDao.findAllByGoogleProjectId(googleProjectIdsSet))
-        .thenReturn(dbGoogleProjectPerCostList);
+    Schema s =
+        Schema.of(
+            Field.of("id", LegacySQLTypeName.STRING), Field.of("cost", LegacySQLTypeName.STRING));
+
+    List<FieldValueList> tableRows =
+        List.of(
+            tableRow("12", "0.013"),
+            tableRow("22", "1.123"),
+            tableRow("23", "6.5"),
+            tableRow("32", "0.34"),
+            tableRow("33", "0.9"));
+
+    when(mockBigQueryService.executeQuery(any()))
+        .thenReturn(BigQueryUtils.newTableResult(s, tableRows));
   }
 
   private Map<String, Double> getUserCostMap() {
